--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
@@ -29,7 +31,8 @@
   },
   "include": [
     "src/**/*",
-    "test/**/*"
-, "extractorderIDnotsureyet.ts"  ],
+    "test/**/*",
+    "extractorderIDnotsureyet.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
