--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sellticket-Backend-",
+  "name": "Zerocard-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -33,15 +33,17 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@biconomy/abstractjs": "^1.0.13",
     "@nestjs/bull": "^11.0.2",
-    "@nestjs/common": "11.1.0",
+    "@nestjs/common": "^11.1.1",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "11.1.0",
+    "@nestjs/core": "^11.1.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "11.1.0",
     "@nestjs/swagger": "^11.0.2",
     "@nestjs/typeorm": "^11.0.0",
-    "@privy-io/server-auth": "^1.20.0",
+    "@privy-io/server-auth": "^1.22.1",
+    "@rhinestone/module-sdk": "^0.2.8",
     "@types/moment-timezone": "^0.5.30",
     "@types/multer": "^1.4.12",
     "@zerodev/ecdsa-validator": "^5.4.5",
@@ -72,7 +74,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.17",
-    "viem": "^2.28.0",
+    "viem": "^2.30.0",
     "web3": "^4.16.0",
     "web3-utils": "^4.3.3"
   },
@@ -105,7 +107,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
