--- a/package.json
+++ b/package.json
@@ -45,90 +45,90 @@
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/bullmq": "^11.0.2",
-    "@nestjs/common": "^11.1.1",
+    "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.1",
+    "@nestjs/core": "^11.1.2",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "11.1.0",
-    "@nestjs/swagger": "^11.0.2",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.8.2",
-    "@privy-io/server-auth": "^1.22.1",
+    "@privy-io/server-auth": "^1.25.1",
     "@rhinestone/module-sdk": "^0.2.8",
     "@types/moment-timezone": "^0.5.30",
     "@types/multer": "^1.4.12",
-    "@zerodev/ecdsa-validator": "^5.4.5",
-    "@zerodev/sdk": "^5.4.28",
-    "axios": "^1.8.4",
+    "@zerodev/ecdsa-validator": "^5.4.9",
+    "@zerodev/sdk": "^5.4.36",
+    "axios": "^1.9.0",
     "body-parser": "^2.2.0",
-    "bullmq": "^5.53.1",
+    "bullmq": "^5.53.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.6.1",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "decimal.js": "^10.5.0",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
-    "file-type": "^20.4.1",
+    "dotenv": "^16.5.0",
+    "ethers": "^6.14.3",
+    "file-type": "^20.5.0",
     "helmet": "^8.1.0",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "moment-timezone": "^0.5.48",
     "moralis": "^2.27.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nestjs-pino": "^4.4.0",
     "node-cron": "^3.0.3",
     "node-rsa": "^1.1.1",
-    "nodemailer": "^6.10.0",
-    "permissionless": "^0.2.42",
-    "pg": "^8.13.1",
+    "nodemailer": "^6.10.1",
+    "permissionless": "^0.2.47",
+    "pg": "^8.16.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
-    "posthog-node": "^4.13.0",
+    "posthog-node": "^4.18.0",
     "prisma": "^6.8.2",
     "pusher": "^5.2.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.17",
     "ulid": "^3.0.0",
-    "viem": "^2.30.0",
+    "viem": "^2.30.6",
     "web3": "^4.16.0",
     "web3-utils": "^4.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
-    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "11.1.0",
     "@types/compression": "^1.8.0",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.57",
     "@types/node-cron": "^3.0.11",
-    "@types/supertest": "^6.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "cross-env": "^7.0.3",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "jsencrypt": "^3.3.2",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.0.0",
+    "lint-staged": "^16.1.0",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.8.2"
   },
@@ -157,5 +157,9 @@
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts",
+    "schema": "./prisma"
   }
 }
