feat(app-health): add health check module with controller and integrate @nestjs/terminus and @nestjs/axios dependencies

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@aws-sdk/client-ses": "^3.821.0",
     "@biconomy/abstractjs": "^1.0.13",
     "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.1.2",
@@ -52,6 +53,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "11.1.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.8.2",
     "@privy-io/server-auth": "^1.25.1",
