--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@zerodev/ecdsa-validator": "^5.4.9",
     "@zerodev/sdk": "^5.4.36",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bullmq": "^5.53.2",
     "class-transformer": "^0.5.1",
@@ -97,6 +98,7 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.17",
     "ulid": "^3.0.0",
+    "uuid": "^11.1.0",
     "viem": "^2.30.6",
     "web3": "^4.16.0",
     "web3-utils": "^4.3.3"
