feat(modules): introduce core module with authentication, cards, transactions, users, and wallets functionalities; restructure existing modules and remove finance and user modules

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nestjs/core": "^11.1.2",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
@@ -58,8 +59,6 @@
     "@prisma/client": "^6.8.2",
     "@privy-io/server-auth": "^1.25.1",
     "@rhinestone/module-sdk": "^0.2.8",
-    "@types/moment-timezone": "^0.5.30",
-    "@types/multer": "^1.4.12",
     "@zerodev/ecdsa-validator": "^5.4.9",
     "@zerodev/sdk": "^5.4.36",
     "axios": "^1.9.0",
@@ -86,6 +85,8 @@
     "node-cron": "^3.0.3",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.10.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "permissionless": "^0.2.47",
     "pg": "^8.16.0",
     "pino-http": "^10.4.0",
@@ -111,8 +112,12 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/moment-timezone": "^0.5.30",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.57",
     "@types/node-cron": "^3.0.11",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
