--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prepare": "[ \"$CI\" != \"true\" ] && lefthook install || true",
+    "prepare": "[ \"$CI\" != \"true\" ] || true",
     "clean": "rimraf dist coverage .cache",
     "prebuild": "yarn run clean",
     "build": "nest build",
@@ -40,15 +40,15 @@
     "precheck": "yarn check-imports"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.821.0",
-    "@biconomy/abstractjs": "^1.0.13",
+    "@aws-sdk/client-ses": "^3.826.0",
+    "@biconomy/abstractjs": "^1.0.14",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/bullmq": "^11.0.2",
-    "@nestjs/common": "^11.1.2",
+    "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.2",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
@@ -56,8 +56,8 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@prisma/client": "^6.8.2",
-    "@privy-io/server-auth": "^1.25.1",
+    "@prisma/client": "^6.9.0",
+    "@privy-io/server-auth": "^1.26.2",
     "@rhinestone/module-sdk": "^0.2.8",
     "@zerodev/ecdsa-validator": "^5.4.9",
     "@zerodev/sdk": "^5.4.36",
@@ -74,7 +74,9 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
     "file-type": "^20.5.0",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "html-to-text": "^9.0.5",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "moment-timezone": "^0.5.48",
@@ -89,18 +91,18 @@
     "passport-local": "^1.0.0",
     "permissionless": "^0.2.47",
     "pg": "^8.16.0",
-    "pino-http": "^10.4.0",
+    "pino-http": "^10.5.0",
     "pino-pretty": "^13.0.0",
     "posthog-node": "^4.18.0",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "pusher": "^5.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.17",
-    "ulid": "^3.0.0",
+    "ulid": "^3.0.1",
     "uuid": "^11.1.0",
-    "viem": "^2.30.6",
+    "viem": "^2.31.0",
     "web3": "^4.16.0",
     "web3-utils": "^4.3.3"
   },
@@ -108,13 +110,14 @@
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "11.1.0",
-    "@types/compression": "^1.8.0",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.2",
+    "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^5.0.3",
+    "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.14",
     "@types/moment-timezone": "^0.5.30",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^20.17.57",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.19.0",
     "@types/node-cron": "^3.0.11",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
