feat(auth): implement OAuth authentication with Google and Apple strategies; restructure auth service to support OAuth sign-in and user management

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: testpass
-      POSTGRES_DB: zerocard-local
+      POSTGRES_DB: zerocard
     ports:
       - '5432:5432'
     volumes:
