--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
     "file-type": "^20.5.0",
+    "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "html-to-text": "^9.0.5",
@@ -100,6 +101,7 @@
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.17",
+    "ua-parser-js": "^2.0.3",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0",
     "viem": "^2.31.0",
@@ -113,6 +115,7 @@
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/geoip-lite": "^1.4.4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.14",
     "@types/moment-timezone": "^0.5.30",
