--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,21 @@
-DB_HOST=db_host
-DB_NAME=sellticket
-DB_USER=db_user
-DB_PASSWORD=db_password
-DB_PORT=0000
+APP_ENV=local
+APP_NAME=zerocard
+APP_PORT=4000
 
-# Redis Connection for BullMQ (Upstash)
-REDIS_HOST=redis_host
-REDIS_PORT=0000
-REDIS_PASSWORD=host_password
+DATABASE_URL=postgresql://admin:testpass@localhost:5432/zerocard?schema=public
+
+REDIS_PORT=6379
+REDIS_URL="redis://localhost:${REDIS_PORT}"
+
+JWT_ACCESS_SECRET=dO7fHZoxuw9qb6Rh8Y5XJ6rPMf4McnMv3rOtvpqg
+JWT_ACCESS_EXPIRY=30m
+JWT_REFRESH_SECRET=6rPMf4McnMv3rOtvpqgdO7fHZoxuw9qb8Y5XJ
+JWT_REFRESH_EXPIRY=7d
+
+AWS_ACCESS_KEY_ID=
+AWS_REGION=
+AWS_SECRET_ACCESS_KEY=
+
+EMAIL_FROM=
+EMAIL_FROM_NAME=
+SUPPORT_EMAIL=
