chore(env): update example environment variables for port and database configuration; add new email fields and Smile ID parameters; update .gitignore to include yarn.lock; bump version in package.json to 1.0.0

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 APP_ENV=local
 APP_NAME=zerocard
-APP_PORT=4000
+APP_PORT=4001
 
-DATABASE_URL=postgresql://admin:testpass@localhost:5432/zerocard?schema=public
+DATABASE_URL=postgresql://admin:testpass@localhost:5433/zerocard?schema=public
 
-REDIS_PORT=6379
+REDIS_PORT=6380
 REDIS_URL="redis://localhost:${REDIS_PORT}"
 
 JWT_ACCESS_SECRET=dO7fHZoxuw9qb6Rh8Y5XJ6rPMf4McnMv3rOtvpqg
@@ -17,5 +17,9 @@ AWS_REGION=
 AWS_SECRET_ACCESS_KEY=
 
 EMAIL_FROM=
-EMAIL_FROM_NAME=
+EMAIL_FROM_NAME=zerocard
 SUPPORT_EMAIL=
+
+SMILE_ID_URL=
+SMILE_ID_PARTNER_ID=
+SMILE_ID_API_KEY=
